FinalFantasyTacticsPartyBuilder/Content/Site.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
}

.body-content {
    padding-top: 50px;
    padding-bottom: 20px;
    width: 100%;
    height:100%;
    background-image: url(Images/party_builder_background.png);
    overflow:scroll;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

img {
    vertical-align: text-top;
}

#party-overview-container {
    width: 100%;
    height: 100%;
    padding: 60px;
}

#party-builder-container {
    width: 100%;
    height: 75%;
}

.selection-square {
    position: absolute;
    width: 70%;
    left: 15%;
    top: 25%;
    z-index: 0;
    visibility: hidden;
}

.unit-container {
    position: relative;
    float: left;
    width: 20%;
    height: 35%;
    margin: 2.5%;
    display: inline-block;
}

.unit-selector {
    z-index: 20;
    width: 100%;
    height: auto;
}

#empty-unit-outline {
    border: 5px dashed black;
    border-radius: 50%;
    width: 50%;
    height: 80%;
    margin: auto;
    padding: 30px 0 30px 0;
}

    #empty-unit-outline:hover {
        box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.50);
        cursor: pointer;
    }

#new-unit-cross-container {
    position: relative;
    margin: auto;
    width: 80%;
    height: 100%;
}

#new-unit-cross-vertical {
    position: absolute;
    left: 40%;
    background: green;
    height: 100%;
    width: 20%;
}

#new-unit-cross-horizontal {
    position: absolute;
    top: 40%;
    background: green;
    height: 20%;
    width: 100%;
}

.unit-selector:hover {
    cursor: pointer;
}

    .unit-selector:hover > .selection-square {
        visibility: visible;
    }

.unit-selector:visited .unit-details-container {
    visibility: visible;
}

.menu-container {
    position: absolute;
    top: 40%;
    left: 50%;
    width: 15%;
    height: auto;
    margin-left: 20px;
    z-index: 10;
}

    .menu-container img {
        margin-bottom: -10%;
    }

.menu {
    height: 80%;
    width: 100%;
    background-image: url(Images/menu_background.png);
    border: 2px solid black;
    box-shadow: black 3px 3px 3px;
    font: 50px 'Altima';
}

    .menu ul {
        margin-top: 15px;
        padding-left: 15px;
    }

    .menu li {
        margin: 5px;
        list-style: none;
        line-height: 70%;
    }

        .menu li a {
            color: inherit;
            text-decoration: none;
            text-shadow: 2px 2px 15px grey;
        }

        .menu li:hover {
            position: relative;
        }


            .menu li:hover:before {
                content: url(Images/menu_cursor.png);
                position: absolute;
                left: -40px;
                bottom: 5px;
            }

.menu-container img {
    width: 30%;
}

.job-blue-orb {
    left: 0%;
    top: 0%;
    width: 8%;
    border-radius: 50%;
    background-color: transparent;
    box-shadow: 1px 1px 20px white;
}

.job-image {
    position: relative;
    margin: auto;
    display: block;
    width: 18%;
    z-index: 6;
}

.job-status-container {
    width: 100%;
    height: 40%;
}

.job-status-hp-container {
    position: relative;
    height: 50%;
    width: 100%;
}

    .job-status-hp-container img {
        height:25px;
        margin-right: -4px;
    }

        .job-status-hp-container img:first-child {
            position: relative;
        }

.job-status-mp-container {
    position: relative;
    height: 50%;
    width: 100%;
}

    .job-status-mp-container img {
        height:25px;
        margin-right: -4px;
    }

        .job-status-mp-container img:first-child {
            position: relative;
        }

.upper-hp {
    position: relative;
    left: 20%;
}

.job-status-divider {
    position: relative;
    top: 20%;
    left: 20%;
}

.lower-hp {
    position: relative;
    top: 25%;
    left: 20%;
}

.hp-bar {
    border-top: 3px solid black;
    border-left: 1px solid black;
    border-right: 1px solid black;
    top: 45%;
    position: absolute;
    background: linear-gradient(to right, darkGreen, turquoise);
    width: 43%;
    height: 25%;
    transform: skewX(-20deg);
}

.upper-mp {
    position: relative;
    left: 20%;
}

.job-status-divider {
    position: relative;
    top: 20%;
    left: 20%;
}

.lower-mp {
    position: relative;
    top: 25%;
    left: 20%;
}

.mp-bar {
    border-top: 3px solid black;
    border-left: 1px solid black;
    border-right: 1px solid black;
    top: 45%;
    position: absolute;
    background: linear-gradient(to right, #ba5000, orange);
    width: 43%;
    height: 25%;
    transform: skewX(-20deg);
}

.unit-details-container {
    width: 90%;
    height:30%;
    left: 5%;
    bottom: 8%;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 20px 30px rgba(0, 0, 0, 0.5);
    padding: 2%;
    z-index: 8;
}

#unit-portrait-menu {
    display: block;
    float: left;
    width: 12%;
    height: 100%;
}

.unit-portrait {
    width: 100%;
    height: 100%;
}

#unit-details-status-container {
    float: left;
    width: 40%;
    height: 100%;
    padding-top: 1%;
    margin-left: -1%;
}

#unit-status-level-container {
    display: inline;
    margin-top:50px;
    margin-left: 20%;
}

#unit-status-experience-container {
    display: inline;
    position: relative;
    margin-left: 5%;
}

#unit-status-hp-container {
    position: relative;
    height:20%;
    top: 20%;
}

#unit-status-mp-container {
    position: relative;
    height:20%;
    top: 30%;
}
/* ... */

